@@ -31,6 +31,12 @@ Revision 4.2.3
   operational again.
 - Use sysUpTime value whenever it is included in Notification PDU, otheriwese
   resort to SNMP engine uptime reading.
+- Types defined within SNMPv1/v2c data structures (rfc1157.py/rfc1905.py)
+  moved to module scope to become accessible by wrapper routines
+  (v1.py/v2c.py). This is used for setting strictly typed default values
+  to corresponding SNMP data structures.
+- Fix to v1.PDUAPI.setDefaults() method that used to set wrongly typed
+  time-stamp component.
 - Fix to IPv6 address handling to prevent system from crashing whilst
   running Python3. 
 - Fix to SNMPv2 exception objects translation into SNMPv1 PDU and NEXT
